argocd-contour/test/others/06-proxy-include-headers.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: root
  namespace: projectcontour-roots
spec:
  virtualhost:
    fqdn: devtest.sanniolo.myinstance.com
  includes:
    - name: blogsite
      namespace: projectcontour-marketing
      conditions:
        - prefix: /blog
        - header:
            name: User-Agent
            notcontains: Chrome
        - header:
            name: User-Agent
            notcontains: Firefox
  routes:
    - services:
        - name: rootapp
          port: 80
      conditions:
        - prefix: /
    - services:
        - name: secureapp-default
          port: 80
      conditions:
        - prefix: /secure
    - services:
        - name: secureapp
          port: 80
      conditions:
        - prefix: /secure
        - header:
            name: User-Agent
            contains: Chrome
